@@ -23,6 +23,8 @@ Mnemosyne 2.6.1
 - Fix interaction between Unicode and Latex (reported by vycska).
 - Work around progress bars which don't close under Linux (fix by Emilian
   Mihalache).
+- Work around 2038 bug, especially on Android, when grading extremely easy
+  cards.
 - Fix bug with special characters like apostrophes in export to *.cards format.
 - Warn when fields are missing during tsv import (requested by Pavel B.).
 - When creating or editing a card, superfluous tags like having both A and A::B
